# dw_blog_django

./: .coveragerc  .env.example  .gitignore  docker-compose.yml  dockerfile  manage.py  pyproject.toml  pytest.ini  vscode.md
dw_blog_django/: asgi.py  urls.py  wsgi.py
dw_blog_django/apps/blog/: apps.py  models.py  urls.py  views.py
dw_blog_django/apps/blog/migrations/: 0001_initial.py  0002_post_notes.py  0003_alter_post_episode_number.py
dw_blog_django/apps/tags/: apps.py  models.py
dw_blog_django/settings/: base.py
dw_blog_django/static/css/: main.css
dw_blog_django/templates/base/: base.html  navbar.html
dw_blog_django/templates/blog/: index.html
dw_blog_django/templates/blog/components/: post_list.html  splash.html
dw_blog_django/templates/blog/pages/: main_series.html
fixtures/: seed_db.py
tests/: conftest.py
tests/blog/: test_post_model.py
tests/factories/: post_factory.py  user_factory.py
